# binary-conversion

./: .clang-format  .gitignore  CMakeLists.txt  README.md  run.sh
.github/workflows/: build-test-deploy-desktop.yml
module/: CMakeLists.txt
module/src/: main.cpp  main.hpp
release/1.0.0/: binary-conversion
scripts/: build.sh  config.sh  run.sh  test.sh
test/: CMakeLists.txt
test/data/: out.txt
test/src/: main.cpp  main.hpp
test/src/data/: actor-test.cpp  actor-test.hpp  command-test.cpp  command-test.hpp  converter-test.cpp  converter-test.hpp  key-test.cpp  key-test.hpp  rune-test.cpp  rune-test.hpp  settings-test.cpp  settings-test.hpp
test/src/test-util/: data.cpp  data.hpp
test/src/util/: arg-parser-test.cpp  arg-parser-test.hpp  binary-util-test.cpp  class-util-test.cpp  class-util-test.hpp  file-util-test.cpp  file-util-test.hpp  password-util-test.cpp  password-util-test.hpp
